--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
     background-color: greenyellow;
 }
 
-p { font-size: 120%; color: dimgray; }
+p { font-size: 110%; color: dimgray; }
+
+//Changed Font Size
 
 p.important { border-style: solid; display: inline-block; border-width: 5px; border-color: purple; }
 
