--- a/style.css
+++ b/style.css
@@ -1,35 +1,56 @@
 body {
     background-color: greenyellow;
+    font-family: 'Roberto', sans-serif; /* Added font-family */
 }
 
-p { font-size: 110%; color: dimgray; }
+p {
+    font-size: 110%;
+    color: dimgray;
+    font-family: 'Roberto', sans-serif; /* Added font-family */
+}
 
-//Changed Font Size
+p.important {
+    border-style: solid;
+    display: inline-block;
+    border-width: 5px;
+    border-color: purple;
+    font-family: 'Roberto', sans-serif; /* Added font-family */
+}
 
-p.important { border-style: solid; display: inline-block; border-width: 5px; border-color: purple; }
+.center {
+    display: block;
+    margin: auto;
+}
 
-.center { display: block; margin: auto; }
-.centertext { text-align: center; }
-
+.centertext {
+    text-align: center;
+    font-family: 'Roberto', sans-serif; /* Added font-family */
+}
 
 figure {
     float: left;
-  text-align: center;
-  font-style: italic;
-  font-size: smaller;
-  text-indent: 0;
-  border: thin silver solid;
-  padding-top: 100;
+    text-align: center;
+    font-style: italic;
+    font-size: smaller;
+    text-indent: 0;
+    border: thin silver solid;
+    padding-top: 100;
+    font-family: 'Roberto', sans-serif; /* Added font-family */
 }
-figcaption{
+
+figcaption {
     caption-side: bottom;
+    font-family: 'Roberto', sans-serif; /* Added font-family */
+
+    //Changed font size to Roberto
 }
 
 h1 {
     text-shadow: 2px 2px 5px red;
-  }
+    font-family: 'Roberto', sans-serif; /* Added font-family */
+}
 
 img {
     border-radius: 50%;
     opacity: 0.5;
-  }
+}
